GNOME Bugzilla – Bug 704926
audiodecoder: leaks input caps
Last modified: 2013-07-26 14:50:06 UTC
Created attachment 250194 [details] [review] Patch in gst_audio_decoder_reset dec->priv->ctx gets memset to 0 before gst_caps_replace
I've also put gst_audio_info_init after the memset.
I'm sure I've fixed this already somewhere, wonder how many copy'n'pastes of that code are around :) commit 197376212c6f54b688f048a67723e53c702d97ac Author: Matej Knopp <matej.knopp@gmail.com> Date: Fri Jul 26 14:28:41 2013 +0200 audiodecoder: do not leak input caps https://bugzilla.gnome.org/show_bug.cgi?id=704926