audiodecoder: do not leak input caps

https://bugzilla.gnome.org/show_bug.cgi?id=704926